NEXT-16520 - Fix meteor page header z-index

--- a/src/Administration/Resources/app/administration/src/app/assets/scss/variables.scss
+++ b/src/Administration/Resources/app/administration/src/app/assets/scss/variables.scss
@@ -238,6 +238,7 @@ $z-index-overlay: 300;
 $z-index-over-overlay: 350;
 $z-index-drag-select-box: 100;
 $z-index-sidebar: 200;
+$z-index-page-header: 550;
 $z-index-select-results: 600;
 $z-index-flyout: 700;
 $z-index-off-canvas: 750;
